--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "dependencies": {
-    "rome": "^10.0.4-beta"
-  },
+  "dependencies": {},
   "name": "question-graph",
   "description": "",
   "version": "1.0.0",
